# cortex-atlas

./: .gitignore  AGENTS.md  DEVELOPMENT_ROADMAP.md  GEMINI.md  IMPLEMENTATION.md  README.md  scratch.txt  setup.sh
app/: package-lock.json  package.json
app/electron/: backendProcess.ts  ipcHandlers.ts  main.ts  preload.ts  terminalManager.ts  tsconfig.json
app/renderer/: package-lock.json  package.json  tailwind.config.js
app/renderer/src/: App.tsx  index.css
app/renderer/src/components/: Layout.tsx  NoteEditor.tsx  NotesList.tsx
app/renderer/src/routes/: Dashboard.tsx  Notes.tsx
app/renderer/src/types/: electron.d.ts  index.ts
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  uvicorn_entry.py
backend/alembic/: env.py
backend/alembic/versions/: 6966bd4e4575_initial_schema_setup.py
backend/atlas_api/: config.py  database.py  main.py
backend/atlas_api/db/: backup.py  schema.sql  seed.py
backend/atlas_api/models/: __init__.py  conversation.py  event.py  note.py  project.py  task.py
backend/atlas_api/routers/: ai.py  conversations.py  dashboard.py  events.py  notes.py  projects.py  search.py  settings.py  tasks.py
backend/atlas_api/utils/: task_extraction.py  wiki_links.py
backend/tests/: conftest.py  test_notes_api.py  test_task_extraction.py  test_wiki_links.py
docs/: ai_implementation.md  electron_design.md  project.md  technical_design.md
