[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-api"
version = "1.0.0"
description = "Atlas local-first personal OS backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "python-dotenv>=1.0.0",
    "openai>=1.3.8",
    "numpy>=1.26.2",
    "google-api-python-client>=2.108.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[tool.setuptools]
packages = ["atlas_api"]
